--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ button{
     opacity: 1;
     
 }
+.winner{
+    background-color:#5dff5d;
+}
 .player-active .name{
     font-weight: 700;
     transition: all 0.5s ease-out;
