--- a/style.css
+++ b/style.css
@@ -3,7 +3,91 @@
     margin: 0;
     padding: 0;
 }
+:root{
+    --gradient-start: #0500FA;
+    --gradient-end: #E01E5A;
+}
+/* Start Loading */
+.loading{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    /*display: flex;
+    align-items: center;
+    justify-content: center;
+    */transition: opacity 3s, visibility 3s;
+    background: linear-gradient(90deg, rgba(5, 0, 250, 1) 7.09%, rgba(224, 30, 90, 1) 92.23%);
+    z-index: 99;
+}
+.loading-content{
+    z-index: 99;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% ,-50%);
+    -webkit-transform: translate(-50% ,-50%);
+    -moz-transform: translate(-50% ,-50%);
+    -ms-transform: translate(-50% ,-50%);
+    -o-transform: translate(-50% ,-50%);
+}
+.loading span{
+    position: relative;
+    font-size: 45px;
+    font-weight: bold;
+    font-family: sans-serif;
+    color: #FFF;
+    letter-spacing: 10px;
+    text-transform: uppercase;
+    animation: load 3s linear infinite;
+    -webkit-animation: load 3s linear infinite;
+}
+.loading-hidden{
+    opacity: 0;
+    visibility: hidden;
+}
+.loading span:nth-child(1){
+    animation-delay: 0s;
+}
+.loading span:nth-child(2){
+    animation-delay: 0.2s;
+}
+.loading span:nth-child(3){
+    animation-delay: 0.4s;
+}
+.loading span:nth-child(4){
+    animation-delay: 0.6s;
+}
+.loading span:nth-child(5){
+    animation-delay: 0.8s;
+}
+.loading span:nth-child(6){
+    animation-delay: 1s;
+}
+.loading span:nth-child(7){
+    animation-delay: 1.2s;
+}
 
+@keyframes load {
+    0%{
+        filter: blur(0);
+        -webkit-filter: blur(0);
+}
+    40%{
+        filter: blur(20px);
+        -webkit-filter: blur(20px);
+}
+    80%{
+        filter: blur(0);
+        -webkit-filter: blur(0);
+}
+    100%{
+        filter: blur(0);
+        -webkit-filter: blur(0);
+    }
+    
+}
+/* End Loading */
+/* Loading */
 body {
         font-family: 'Nunito', sans-serif;
         font-weight: 400;
@@ -49,6 +133,29 @@ button{
 .player-active{
     background-color: rgba(255, 255, 255, 0.4);
     opacity: 1;
+    border: 5px dotted white;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    box-shadow: 5px 8px 51px -3px rgba(255,255,255,0.75);
+    animation: ff 0.4s infinite;
+    -webkit-animation: ff 0.5s infinite;
+}
+@keyframes ff {
+    0%{
+        border-inline:  3px solid var(--gradient-end);
+        border-block: 3px solid var(--gradient-start);
+    }
+    50%{
+        border-block: 3px solid var(--gradient-end);
+        border-inline: 3px solid var(--gradient-start);
+    }
+    100%{
+        border-inline: 3px solid var(--gradient-end);
+        border-block: 3px solid var(--gradient-start);
+    }
     
 }
 .winner{
@@ -128,8 +235,7 @@ button{
     text-transform: uppercase;
     cursor: pointer;
     font-weight: 400;
-    transition: all 0.2s;
-    background-color: white; 
+    transition: all 0.2s; 
     background-color: rgba(255, 255, 255, 0.6); 
     backdrop-filter: blur(144px);
     padding: 0.6rem 1.5rem;
@@ -152,4 +258,134 @@ button:focus{
     -moz-transform: translate(-50% , 3px);
     -ms-transform: translate(-50% , 3px);
     -o-transform: translate(-50% , 3px);
+}
+button:hover{
+    background-color: white;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+/* mohda king */
+img{width: 100%;}
+.dice{
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 212px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+.cube{
+    width: 100px;
+    height: 100px;
+    position: relative;
+    transform-style: preserve-3d;
+    transform: translateZ(-50px);
+    transition: all 0.8s;
+    -webkit-transition: all 0.8s;
+    -moz-transition: all 0.8s;
+    -ms-transition: all 0.8s;
+    -o-transition: all 0.8s;
+}
+.animation-1{
+    animation: spin 50s linear infinite;
+    -webkit-animation: spin 50s linear infinite;
+}
+*[class^='cube_face'] {
+    display: grid;
+    position: absolute;
+    place-items: center;
+    width: 100px;
+    height: 100px;
+    border: 1px solid #444;
+    font-size: 25px;
+    font-weight: bold;
+    color: #000;
+    background: #FFF;
+    box-shadow: inset 0 0 0 #ccc;
+    animation: spin 1s;
+    -webkit-animation: spin 1s;
+}
+.cube_face_1 {
+    transform: rotateY(0deg) translateZ(50px);
+}
+.cube_face_2 {
+    transform: rotateY(90deg) translateZ(50px);
+}
+.cube_face_3 {
+    transform: rotateY(180deg) translateZ(50px);
+    -webkit-transform: rotateY(180deg) translateZ(50px);
+    -moz-transform: rotateY(180deg) translateZ(50px);
+    -ms-transform: rotateY(180deg) translateZ(50px);
+    -o-transform: rotateY(180deg) translateZ(50px);
+}
+.cube_face_4 {
+    transform: rotateY(-90deg) translateZ(50px);
+}
+.cube_face_5 {
+    transform: rotateX(90deg) translateZ(50px);
+}
+.cube_face_6 {
+    transform: rotateX(-90deg) translateZ(50px);
+}
+@keyframes spin {
+    0% {
+        transform: translateZ(-50px) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    }
+    16% {
+        transform: translateZ(-50px) rotateX(180deg) rotateY(180deg) rotateZ(0deg);
+    }
+    33% {
+        transform: translateZ(-50px) rotateX(360deg) rotateY(90deg) rotateZ(180deg);
+    }
+    50% {
+        transform: translateZ(-50px) rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+    }
+    66% {
+        transform: translateZ(-50px) rotateX(180deg) rotateY(360deg) rotateZ(270deg);
+    }
+    83% {
+        transform: translateZ(-50px) rotateX(270deg) rotateY(180deg) rotateZ(180deg);
+    }
+    100% {
+        transform: translateZ(-50px) rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+}}
+
+.animation-2 { animation: spin 1.6s linear infinite ; -webkit-animation: spin 1.6s linear infinite ; }
+.cube.show-1 { transform: translateZ(-50px) rotateY(0deg); -webkit-transform: translateZ(-50px) rotateY(0deg); -moz-transform: translateZ(-50px) rotateY(0deg); -ms-transform: translateZ(-50px) rotateY(0deg); -o-transform: translateZ(-50px) rotateY(0deg); }
+.cube.show-2 { transform: translateZ(-50px) rotateY(-90deg); -webkit-transform: translateZ(-50px) rotateY(-90deg); -moz-transform: translateZ(-50px) rotateY(-90deg); -ms-transform: translateZ(-50px) rotateY(-90deg); -o-transform: translateZ(-50px) rotateY(-90deg); }
+.cube.show-3 { transform: translateZ(-50px) rotateY(-180deg); -webkit-transform: translateZ(-50px) rotateY(-180deg); -moz-transform: translateZ(-50px) rotateY(-180deg); -ms-transform: translateZ(-50px) rotateY(-180deg); -o-transform: translateZ(-50px) rotateY(-180deg); }
+.cube.show-4 { transform: translateZ(-50px) rotateY(90deg);}
+.cube.show-5 { transform: translateZ(-50px) rotateX(-90deg); -webkit-transform: translateZ(-50px) rotateX(-90deg); -moz-transform: translateZ(-50px) rotateX(-90deg); -ms-transform: translateZ(-50px) rotateX(-90deg); -o-transform: translateZ(-50px) rotateX(-90deg); }
+.cube.show-6 { transform: translateZ(-50px) rotateX(90deg); }
+
+.myscale{
+    animation: bomb 1s infinite;
+    -webkit-animation: bomb 1s infinite;
+    left: 40%;
+}
+@keyframes bomb {
+    0%{
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);}
+    50%{
+        transform:scale(1);
+        -webkit-transform:scale(1);
+        -moz-transform:scale(1);
+        -ms-transform:scale(1);
+        -o-transform:scale(1);
+}
+100%{
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);}
 }
